Backend Container fixed

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,6 +7,7 @@ RUN pip install -r requirements.txt
 
 COPY src/ .
 
+
 EXPOSE 8000
 
-CMD ["python", "-m", "src.main"]
+CMD ["uvicorn", "src.server:app", "--host", "0.0.0.0", "--port", "8000"]
